2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincIdent.cs:
	* ZincIdentBoxBase.cs:
	* IZincIdentContainer.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincIdent.cs:
	* IZincIdentBox.cs:
	* ZincIdentBoxBase.cs:
	* ZincIdentContainer.cs:
	* IZincIdentContainer.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* HeadTail.cs:
	* IZincItem.cs:
	* ZincIdent.cs:
	* ZincItemType.cs:
	* IZincIdentBox.cs:
	* ZincPrintUtils.cs:
	* ZincIncludeItem.cs:
	* ZincIdentBoxBase.cs:
	* ZincAnnotationItem.cs:
	* ZincIdentContainer.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincData.cs:
	* ZincItem.cs:
	* ZincType.cs:
	* HeadTail.cs:
	* ZincIName.cs:
	* IZincItem.cs:
	* ZincModel.cs:
	* ZincIScope.cs:
	* ZincScalar.cs:
	* ZincEnumItem.cs:
	* ZincInstance.cs:
	* ZincCompound.cs:
	* ZincNameBase.cs:
	* ZincFunction.cs:
	* ZincNamespace.cs:
	* ZincPredicate.cs:
	* ZincScopeBase.cs:
	* ZincException.cs:
	* ZincINamespace.cs:
	* ZincIdentifier.cs:
	* ZincTotalOrder.cs:
	* ZincVarDeclItem.cs:
	* ZincIncludeItem.cs:
	* ZincTypeInstance.cs:
	* ZincGlobalVariable.cs:
	* ZincParseException.cs: 
