@@ -1,5 +1,5 @@
 //
-//  ZincAnnotationItem.cs
+//  TypeInstExpressionIdent.cs
 //
 //  Author:
 //       Willem Van Onsem <vanonsem.willem@gmail.com>
@@ -22,21 +22,9 @@ using System;
 
 namespace ZincOxide.MiniZinc {
 
-	public class ZincAnnotationItem : ZincIdentBoxBase, IZincItem {
+	public class TypeInstExpressionIdent : ZincIdentBoxBase {
 
-		#region IZincItem implementation
-		public ZincItemType Type {
-			get {
-				return ZincItemType.Annotation;
-			}
-		}
-		#endregion
-
-		public ZincAnnotationItem (ZincIdent ident) : base(ident) {
-		}
-
-		public override string ToString () {
-			return string.Format ("annotation {0} {1}", this.Ident, null);
+		public TypeInstExpressionIdent (ZincTypeInstExpression expression, ZincIdent ident) : base(expression) {
 		}
 
 	}
